UCHAT-3315 Style issue with logged out page - SiteName is not centered

--- a/sass/routes/_signup.scss
+++ b/sass/routes/_signup.scss
@@ -17,6 +17,12 @@
     padding: 100px 0 50px;
     position: relative;
 
+    .signup__content {
+        h1 {
+            text-align: center;
+        }
+    }
+
     &.branded {
         @include display-flex;
         @include flex-direction(row);
